update: dsa 18.md

--- a/dsa/contents/18.md
+++ b/dsa/contents/18.md
@@ -62,7 +62,7 @@
     <br />
 </div>
 
-### 哈夫曼树 (Huffman Tree)
+### 哈夫曼树 Huffman Tree
 
 - 如上图，不仅要考虑字符的深度(编码比特数)，还要考虑出现的次数，此时平衡树并不是最完美的树了
 - 上图三种不同的排列方式消耗不同的带宽，可见第三棵树是消耗最小的
