update: dsa 18.md

--- a/dsa/contents/18.md
+++ b/dsa/contents/18.md
@@ -20,7 +20,7 @@
     * 而bubble sort排序是移动相邻两个窗口的元素，像下排一图中的元素：a <= b; x <= y; 我们只需要检验
     * 当它们变换位置变成了下排二图，下排三图的时候，下面的元素总大于上面的元素即可
 
-### 哈夫曼编码 PFC Coding
+### 哈夫曼编码 Huffman PFC Coding
 
 - 我们发送文字，一般会把字母转换成01比特的二进制流，
 - 是一棵二叉树的结构，通过这个结构来完成可行编码的设计
