update: dsa 18.md

--- a/dsa/contents/18.md
+++ b/dsa/contents/18.md
@@ -22,7 +22,7 @@
 
 ### 哈夫曼编码 Huffman PFC Coding
 
-- 我们发送文字，一般会把字母转换成01比特的二进制流，
+- 我们发送文字，一般会把字母转换成01比特的二进制流
 - 是一棵二叉树的结构，通过这个结构来完成可行编码的设计
 
 <div align="center">
@@ -33,12 +33,12 @@
 </div>
 
 - 右边的字母分别由一串01数字组成，左边是组成整个信息流的二叉树
-- 这个二叉树的特点是左孩子都是0，右孩子都是1。
+- 这个二叉树的特点是左孩子都是0，右孩子都是1
 - 由此可知，M是1，A是010, 每次解码完成一个字母就会reset到树根节点准备下一次解码
 - 通过这个方法，解码完成所有的字母
 - 这个二叉树对应的编码规则叫做前缀无歧义编码(PFC Coding)
 - 这种编码有好坏之分，在信道上传递数据都是需要用到带宽的，所以我们希望传递比特越少越好
-- 传递一个字符需要几个比特取决于这个字符在这颗树中的深度，比如A这个字符010,深度是3
+- 传递一个字符需要几个比特取决于这个字符在这棵树中的深度，比如A这个字符010, 深度是3
 
 <div align="center">
     <img width="600" src="./screenshot/57.jpg">
@@ -50,9 +50,9 @@
 - 上图是优化二叉树的过程，上图从1树到2树做了一个交换, 总计从9到8节省了一个比特
 - 如果有2片叶子的深度差至少有2层，比如：M节点与(A和I)节点
 - 那么就可以将这个悬殊两层之深的叶子节点(A、I)的父亲元素(这个父亲比M还要深一层)和M进行一个交换
-- 就会得到损失一个，收货两个的效果，这时候就会得到一份的净利润
-- 同理树3转换成树2，一个道理，像是中间的这颗树的结构，我们叫做**满树**
-- 如果两片叶子深度差不超过1，都是一个完美的解决方案。
+- 就会得到损失一个，收获两个的效果，这时候就会得到一份的净利润
+- 同理树3转换成树2，一个道理，像是中间的这棵树的结构，我们叫做**满树**
+- 如果两片叶子深度差不超过1，都是一个完美的解决方案
 - 但是，这离我们真实的场景还很远，上面每个叶子节点的权重都是1，或者说没有进行权重计算
 
 <div align="center">
@@ -77,10 +77,10 @@
     <br />
 </div>
 
-- 上图这是一颗哈夫曼树(Huffman Tree) 是最终构造的结果，哈夫曼用贪心策略生成出的一棵树
+- 上图这是一棵哈夫曼树(Huffman Tree) 是最终构造的结果，哈夫曼用贪心策略生成出的一棵树
 - 一开始随便抓一些文字统计一下各自出现的频率，接下来构造树结构，绿色方块中是我们的字符和字符的频次
 - 这个树结构不是从根部生长而是从叶子开始生长，从叶子慢慢向着根部来生长，这棵树的生长方式只能是合并而非分割
-- 把叶子不断的合成子树，再把子树构成更大的子树，不断的合成，直到最后合成最后一颗完整的树，这棵树就按贪心原则构造出来了
+- 把叶子不断的合成子树，再把子树构成更大的子树，不断的合成，直到最后合成最后一棵完整的树，这棵树就按贪心原则构造出来了
 - 我们把出现次数最高的字符放到最高，把出现次数次高的字符放到次高...出现频率最低的放到最低
 - 这是我们最后的目标，我们就奔着这个目标贪心的构造，下面我们就开始来构造：
   * 我们把出现频率最低的两个字符(权重分别是2,4)取出来合并变成一棵子树(变成了6)，再把这棵子树(权重用6来代表)重新插回去
