update: dsa 18.md

--- a/dsa/contents/18.md
+++ b/dsa/contents/18.md
@@ -23,7 +23,7 @@
 ### 哈夫曼编码 Huffman PFC Coding
 
 - 我们发送文字，一般会把字母转换成01比特的二进制流
-- 是一棵二叉树的结构，通过这个结构来完成可行编码的设计
+- 下图是一棵二叉树的结构，通过这个结构来完成可行编码的设计
 
 <div align="center">
     <img width="600" src="./screenshot/56.jpg">
