--- a/dsa/contents/19.md
+++ b/dsa/contents/19.md
@@ -133,3 +133,227 @@ for alias, name in beauty.items():
     * 无论在栈还是在队列中找，只需要考虑前面的两个，充其量4个元素就够了
     * 可能最小的两个元素只来自于栈或只来自于堆或一个来自于栈，一个来自于堆
     * 这样每一次比较都是常数，整体上来说就是线性的
+
+### Minium Spanning Tree
+
+<div align="center">
+    <img width="600" src="./screenshot/65.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- Minium Spanning Tree 最小支撑树或最小生成树(MST)
+- 我们知道图可以描述城市网络，交通网络，计算机网络等，这些网络都是由点和线构成的
+- 我们希望将这些点连成一个有效的结构(有效指的是，保持联通性，任何两点之间都要有一条路连通)
+- 而我们知道，每一条边都是有成本的, 比如修路的成本，也就是权重，所以这张图是一张有权图
+- 我们要实现整体的连通，需要有两个原则：
+    * 边不能太少，太少了肯定连通不了；边不能太多，不能出现环路
+    * 权重问题，总体权重最小，即总成本最小
+- 我们需要既要连通也没有环的树结构中，在所有可能的树结构中找到权重最小的树
+- 这样的树可以把所有的点都支撑起来，同时它的成本又能达到最小
+
+<div align="center">
+    <img width="600" src="./screenshot/66.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 为了完成这件事，我们依然使用贪心法
+
+1 ) **Prim算法**
+
+- 早年Prim经过自己的观察分析，找到了一种方案
+- 他引入了图论中的一个知识叫 **Cut** (割)
+- 将图中的所有点归为两类，一类集合叫U, 另一类是U的补集V, 记为 V\U，如图(a)所示
+- 一旦我们将彼此不重叠的两部分分出来了，我们就称之为 Cut
+- Cut 把点给分了，同时无形中也把边给分了
+- 边被分成了两类：
+    * 一类是连接于同一侧点集内的边，比如U或V\U内的边
+    * 另一类是跨界的边，连接的两点恰好属于被Cut的两端：u和v，这类边我们可以称为桥或跨越边，这类边也有权重
+    * 一旦有个割以后，就会有一系列的cross边(桥)和noncross边(各自集合内的边)
+- 这样我们知道，点和边都会被分类，Prim说我们把目光关注到所有的cross边，这些边都有权重
+- Prim说把这些权重最小的cross边标记出来并断言这些边必定会被MST所采用
+- 也就是说，任何被Cut的最短的cross边都会被MST所采用
+- 严格地表述：这样一条最短的跨边至少会被某一棵MST采用
+- 我们现在使用反证法来看下这个问题，假设在选取cross边的时候不取最小的uv边,而是像图(b)中的st边
+- 那么这时候选取的st这条cross边一定比uv这条边权重高，然后我们再强行的加入uv边，如图(c)
+- 此时图变成了环而非树结构了，对于树而言, 任何一棵树，如果有n个节点, 那么它的边不多不少恰好有n-1个
+- 而这个环因为多加了一条，是n条边，而且不符合MST的原则, 我们将这条st边移除，如图(d)，这时候边的数目又变成了n-1
+- 重新变成了一棵树，这样连通性并没有破坏, 只是将桥换了一下: st边换成了uv边
+- 图(b)和图(d)的差异在于所选取的连通边的权重，所以选择uv边来说，更加合理更符合MST
+- 这里有一个算法实例，在prim算法中, 任何Cut的最小边一定会被MST所采用，他把目光始终注意在某一个Cut的最小跨边上
+
+<div align="center">
+    <img width="400" src="./screenshot/67.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 如何构成这个Cut? 构成Cut的条件是任何两边非空即可, 最简单的构成割的方法是，在所有的点中找到一个点如下图A点
+
+<div align="center">
+    <img width="400" src="./screenshot/68.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 然后相对于A，剩下的n-1个点相对于A点则构成了一个Cut，即此时集合U中只有A这一个元素
+- 对于A点来说，AB, AD, AG 都是cross边，它们各自的权重：4,6,7, 显然我们应该选择AB这条边作为cross边
+- 接下来将B纳入集合U中，此时的U有A,B两个元素，构成一个新的整体
+
+<div align="center">
+    <img width="400" src="./screenshot/69.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 同样，我们贪心的继续下去，相对于新的集合U而言，UD, UG, UC 都是cross边，各自权重分别为：6,7,12
+- 根据Prim原理，我们将目光盯在这个苟且的局部，可见6是最小的权重, UD为最佳cross边
+- 将D加入集合U, 此时集合U中的元素: A,B,D, 根据这个原理，我们有
+
+<div align="center">
+    <img width="400" src="./screenshot/70.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 继续这个过程，有
+
+<div align="center">
+    <img width="400" src="./screenshot/71.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 继续，有
+
+<div align="center">
+    <img width="400" src="./screenshot/72.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 继续，有
+
+<div align="center">
+    <img width="400" src="./screenshot/73.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 继续，有
+
+<div align="center">
+    <img width="400" src="./screenshot/74.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 最后，有
+
+<div align="center">
+    <img width="400" src="./screenshot/75.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 此时已经扩无可扩了，这就是贪心最后期待的大馅饼
+- 这个过程从任何一点开始都可以，也类似Huffman Tree, 最终结果也不见得唯一
+- 也就是说MST或Huffman Tree同时可能有多棵, 虽然形状上有多棵，但是指标上是一样的
+
+<div align="center">
+    <img width="400" src="./screenshot/76.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+**矩阵方式**
+
+- 如上图，现在有一个演示，这个矩阵代表了带权图结构, 这是一个无向图，所以忽略了下面的一半
+- 这里是0~16, 共计17个点的图, 这里就像之前取A点一样，我们默认取0这一点(这里不是必须的, 但我们不妨从这里开始)
+- 如果第一个点是0这个点，其他16个点全在另一侧的话，等同于从0发出的边，这些边无一例外都会在0对应的这一行里
+- 在第一次的时候，还没开始这个预处理已经做好了，红色的方框代表的是cross边，权重最小的9染色最重
+- 也就是0-15这条边是我们选择的边，我们给它标记出来为绿色
+
+<div align="center">
+    <img width="400" src="./screenshot/77.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 现在无论是从0发出的边还是从15发出的边都要标记颜色，因为它们都可能是cross边
+- 此时15这一列开始染色了，表示15这一点找到了cross边
+- 可见, 5-15, 13-15 都是cross边, 同时我们也看到它们的边权重比较重，分别是97, 89
+- 所以接下来，我们选择0-16这条边，它的权重是14, 现在16被加入这个阵营了
+
+<div align="center">
+    <img width="400" src="./screenshot/78.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 同时16这一列也会有相应的染色，表示cross边
+
+<div align="center">
+    <img width="400" src="./screenshot/79.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 我们找到了5-16这条边，权重为20, 我们将其再次加入阵营，从以上的分析可以得到下图
+
+<div align="center">
+    <img width="300" src="./screenshot/80.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 重复这一过程，直到最后，我们得到
+
+<div align="center">
+    <img width="400" src="./screenshot/81.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 此时17个点都会被加入进来，绿色格子有16个，表示除了初始0点的其他16个点以及相应的cross边
+- 而灰色的格子都是某个阶段的noncross边，在集合内部自己连着的，对MST扩展不起作用
+- 以上整个过程即是算法的原理，我们使用上图的矩阵方式来实现该原理，所有操作都在矩阵上，同时我们可以画出相关连接图
+- 最后的结果是一个连通的无环的图，也就是我们的支撑树，同时这棵树也是权重最小的
+- 由于和矩阵打交道，所以这种方式效率较低
+
+**堆方式**
+
+- 处理Prim算法，用优先级队列是最好的，我们需要用到堆结构
+
+<div align="center">
+    <img width="400" src="./screenshot/82.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 堆结构逻辑上是一棵树结构，物理上，通过数组即可实现
+
+TODO
+
+2 ) **Kruskal算法**
+
+- TODO
