update: dsa 19.md

--- a/dsa/contents/19.md
+++ b/dsa/contents/19.md
@@ -344,16 +344,210 @@ for alias, name in beauty.items():
 - 处理Prim算法，用优先级队列是最好的，我们需要用到堆结构
 
 <div align="center">
-    <img width="400" src="./screenshot/82.jpg">
+    <img width="600" src="./screenshot/82.jpg">
     <br />
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
 </div>
 
-- 堆结构逻辑上是一棵树结构，物理上，通过数组即可实现
+- 堆结构逻辑上是一棵树结构，物理上通过数组即可实现
+- 我们可以把图上所有的节点组织成一个Priority Queue(PQ), 这其中有很多的点
 
-TODO
+<div align="center">
+    <img width="400" src="./screenshot/83.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 在算法过程中，包括从第一步开始, 有一些点进入到集合U中, 上面是集合U, 下面是U的补集: V\U
+- 我们的算法会从0号或者A开始(找到一个点开始即可), 依次地把这些点拉上去, 直到把所有的点都拉上去
+- 拉上去的方法就是贪心方法, 我们要找到在所有的这些可能的cross边中最短的一条
+- 当然在一般情况下将来还会有其他点来贡献可能的跨边，同样找到最短的一条
+- 我们可以把下面的每一个点自己来记一个数, 即自己所拥有的权重
+- 这里的权重可以认为是集合V\U中的点到集合U中的距离 distance
+- 这里的距离表示：$dist(v) = min{|v, u|, u \in U}$
+- v是集合V\U中的元素, u是集合U中的元素，这个距离即：当前v和来自集合U中所有的u的距离的最小值
+- 下面的所有v根据这个原则将自己的权重指标优化到最小, 我们只要扫描一遍，在其中找到在最小中的总体的最小的
+- 其实我们通过这个堆的数据结构没有必要扫描所有，我们只要调用堆的`delMin()`接口即可把最短的边找到，这里的效率是O(logn)
+- 这样的话，用O(logn)的时间处理好一个，总体处理只需要O(nlogn)
+- 从这里可以看出，当研究算法到了一定程度的时候, 数据结构是绕不过去的
+- 数据结构是算法的积淀, 很多算法会在成熟研究后会积淀到某一个数据结构中
 
 2 ) **Kruskal算法**
 
-- TODO
+- 无论是Prim算法还是Kruskal算法都是贪心的算法
+- 它们一开始都有一个美好的愿景(最终目标), 但在实施的过程中都采用了一种苟且的行为(每次都挑最小的)
+- Kruskal算法是如何挑选最小的呢? Kruskal认为不用考虑最小的桥, 在图中每个边都有自己的权重, 都可以先按大小先排个序，比如单调递增
+- Kruskal说我们把目光盯住最短的一条边, 因为要求总体最短, 那么组成树的边各自要尽可能的短, 这条最短的边要优先引入, 并且被所有的MST采用(这条最短的边会出现在所有的MST中)
+- 也就是说我们选的这条最短的边在Prim算法中也会被采用
+- 再回到Kruskal算法中来, 我们继续把目光盯住次最短边,也就是单调递增排好序的第二条边
+- 这条的次最短边也会被MST所采用, 也会被所有的MST所采用, 为什么?
+    * 拿这条次最短边来说, 当一个端点加入集合U中的时候, 另一个端点也会很快加入, 但可能不是马上加入
+    * 因为这时候有可能最短边也是其中的一座桥, 就轮不到次最短边了, 这时候它只能退而求其次, 所以可能并不会马上被加入
+        * 当最短边已经在集合U中了, 那次最短边的另一个端点会马上被拉进集合U中
+        * 当最短边距离还很远并没有被探测到, 那么也不会影响次最短边的另一个端点的立刻加入
+        * 但是当最短边此时也构成了一座桥, 那么显然, 次最短边会退居其次, 优先考虑最短边
+        * 最短边加入集合U中之后, 次最短边的另一端将立即加入集合U
+    * 所以在这个排好序的集合中的第一和第二两条边都可以被所有MST所采用
+- 但是这种推论并不适合第三条边和以后的边, 第一和第二两条边我们都可以通过以上来证明出来，但是第三条边(第三最短边)不能
+- 因为第三条边可能和第一和第二两条边构成一个环路, 而且是集合U内部的一条边(无用边), 如果是环路则违背了MST的原则, 而且树中是不能有环的
+- 而且构成环路的风险随着后面边的加入越来越大, 下面我们来看下Kruskal算法的具体实现
+
+- 把所有的边按权重先排个顺序, 前两个最小的不用考虑, 直接加入集合U中
+- 当第三个开始的时候就有可能碰到环路了, 如果构成了环路, 那么用灰色来标记(相当于扔掉)
+- 如何判断新引入的边造成了环路呢? 可以通过判断这条边是来自两棵树中的点还是来自同一棵树中的点
+- 如果新引入的边是来自两棵树那不会构成环路，否则构成环路
+
+<div align="center">
+    <img width="400" src="./screenshot/84.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 如上图，如果新引入的边是橙色或红色的边(两种情形举例)，我们可以看到，橙色的边不会构成环路，而红色的边构成了环路
+- 橙色的边将两棵树合二为一，是安全的，符合MST原则，我们按照这种安全的方式来添加, 最终合并成一棵树，就是我们最终要的馅饼
+- 仍旧假设我们有17个点，一开始的时候我们可以看做是17棵树，逐个归类，如何归类?
+
+<div align="center">
+    <img width="800" src="./screenshot/85.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 还是按之前说的，先将具有权重的边按大小进行排序
+- 比如，权重最小的边是权重为1的边, 连接着5, 15两点, 此时我们将8, 13归为一类(挪到同一列表示归为一类, 也就是合并成一棵树)
+
+<div align="center">
+    <img width="800" src="./screenshot/86.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 此时，深绿色表示当前的边或端点, 红色表示接下来的边和端点
+- 紧接着, 找到权重次小的2, 连接着2, 3两点, 将2, 3归为一类
+
+<div align="center">
+    <img width="800" src="./screenshot/87.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 好的，现在是第三条最短边了，此时权重为14, 连接着9, 16两点, 将9, 16归为一类
+
+<div align="center">
+    <img width="800" src="./screenshot/88.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 按照这种方式持续走下去 ...
+- 当将要到权重为20的这条边时，它连接着0, 15, 将它们归为一类 (注意归类之前, 5, 10, 15是在同一棵树上, 下图为归类之前的状态)
+
+<div align="center">
+    <img width="800" src="./screenshot/89.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 此时到了权重为20的这条边, 开始对0, 15进行归类, 可以看到 0, 5, 10, 15 四个端点形成了一棵树, 如下图
+
+<div align="center">
+    <img width="800" src="./screenshot/90.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 按照这种方式继续走下去 ...
+- 当将要到权重为47的这条边时，它连接着2, 4, 但是从下图可见，2, 4 这两点已经在同一棵树中的, 如果再次将 2, 4连起来将构成一个环路
+
+<div align="center">
+    <img width="800" src="./screenshot/91.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 果断舍弃此边, 权重为47的这条边变灰
+
+<div align="center">
+    <img width="800" src="./screenshot/92.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 只要遇到环路就立即舍弃，进入下一步，按照这个规则持续往下走, 不断的完成树的合并，直到最后一棵，构成了我们的最小生成树
+
+<div align="center">
+    <img width="800" src="./screenshot/93.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 以上就是Kruskal算法的原理
+- Kruskal算法最核心的工作是判断由若干个节点构成的一棵树与另一棵由若干个节点构成的一棵树是否是同一棵树
+- Kruskal算法中的一个技巧是将同一棵树中的元素归为一列里面，这种专门的数据结构叫做并查集(Union Find)
+
+**关于并查集的扩展**
+
+1 ) 并查集的概念
+
+- 并查集支持的操作就是在Kruskal算法中支持的操作，有两种：Find 和 Union
+
+<div align="center">
+    <img width="400" src="./screenshot/94.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 关于Find操作：对于任何一个点，无论是1, 4, 8 我都来确定一下它归属于哪个子集(小树)
+- 我们在每棵小树中都取一个代表元素(叶子节点)来作为这棵树的标识, 比如: 在1,4,8这棵小树中, 无论查谁返回的都是8
+- 就像在Kruskal算法中无论是谁都把它标到同一列中去是一样的，这个标识用谁都可以，表示一下即可(因为都是不重复元素)
+- 比如上图中，我们这样来定：查5返回5, 查9返回5；查10或11，返回10; 查2或3, 返回2; 查6, 返回6
+- 根据这个数据结构, 当我们准备连接1和4, 我们进行find(1)和find(4)操作, 如果返回值是一样的(这里都为8), 代表的是同一棵树(跳过)
+- 当我们准备连接1和10, 我们进行find(1)和find(10)操作, 结果返回值不同(8, 10), 代表是两棵树, 可以进行连接
+- 将1和10连连起来后, 也就是将两棵树连在了一起, 这就是并查集的另一个操作：Union
+- 关于Union操作：按上图, 假设我们要连的是树(2, 3) 和 树(6), 构成一棵新的由三个元素(2, 3, 6)构成的子树, 只需要进行Union(2,6)即可
+- 所以，我们看到，通过并查集的这两个操作Find和Union，我们即可高效实现Kruskal算法
+- 并查集(Union Find)也叫做独立集(Disjoint-Set)
+
+2 ) 并查集的实现
+
+- 按照上面Kruskal算法原理的演示, 其实也暗示了并查集的实现原理
+
+<div align="center">
+    <img width="800" src="./screenshot/95.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 在一开始的时候，每片叶子(元素)都是一棵独立的树, 分别独立的呆在各自的行和列上, 是一个对角线的分布
+- 每片叶子都是独立集中初始的元素, 如果试图连接某两个点, 比如上图的4, 7, 我们就要把4, 7这两棵树进行Union
+- 合并是这样进行的: 4或7随便谁跑到对方所在的列中即可, 即可构成一棵新树
+- 我们可以看到, 在同一列中存在了两个7, 上面的7其实是4搬过来的, 我们直接把4改成7, 这里我们通过7代表这棵树的标识
+- 也就是说，初始状态时各自为一类, 现在4悄然之间归到7这一类了
+- 然后我们继续做Union, 如下：
+
+<div align="center">
+    <img width="800" src="./screenshot/96.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 现在我们试图将1和6进行Union, 我们发现1是标识, 代表一类, 在这一类中, 除了1, 还有4和7, 4和7也标成1, 代表同一类
+- 这时候我们做Union可能比较困难, 我们能找到1, 但是找6的时候, 发现6也是一类的标识, 在6这一类中还有2, 5, 9
+- 无论是1类还是6类, 类中的成员都很多, 无论将1类归为6类, 还是将6类归为1类, 每次搬家都耗费很多时间
+- 这种方式我们称为Slow-Union, 效率较低, 复杂度很高, 时间上会受到惩罚
+- TODO ...
