update: dsa 19.md

--- a/dsa/contents/19.md
+++ b/dsa/contents/19.md
@@ -518,7 +518,7 @@ for alias, name in beauty.items():
 - 当我们准备连接1和10, 我们进行find(1)和find(10)操作, 结果返回值不同(8, 10), 代表是两棵树, 可以进行连接
 - 将1和10连连起来后, 也就是将两棵树连在了一起, 这就是并查集的另一个操作：Union
 - 关于Union操作：按上图, 假设我们要连的是树(2, 3) 和 树(6), 构成一棵新的由三个元素(2, 3, 6)构成的子树, 只需要进行Union(2,6)即可
-- 所以，我们看到，通过并查集的这两个操作Find和Union，我们即可高效实现Kruskal算法
+- 所以，我们看到通过并查集的这两个操作Find和Union，我们即可高效实现Kruskal算法
 - 并查集(Union Find)也叫做独立集(Disjoint-Set)
 
 2 ) 并查集的实现
@@ -533,11 +533,15 @@ for alias, name in beauty.items():
 </div>
 
 - 在一开始的时候，每片叶子(元素)都是一棵独立的树, 分别独立的呆在各自的行和列上, 是一个对角线的分布
-- 每片叶子都是独立集中初始的元素, 如果试图连接某两个点, 比如上图的4, 7, 我们就要把4, 7这两棵树进行Union
-- 合并是这样进行的: 4或7随便谁跑到对方所在的列中即可, 即可构成一棵新树
-- 我们可以看到, 在同一列中存在了两个7, 上面的7其实是4搬过来的, 我们直接把4改成7, 这里我们通过7代表这棵树的标识
-- 也就是说，初始状态时各自为一类, 现在4悄然之间归到7这一类了
-- 然后我们继续做Union, 如下：
+- 每片叶子都是独立集中初始的元素, 如果试图连接某两个点, 比如上图的4, 7, 我们就要把4, 7这两棵树进行Union合并
+- 合并是这样进行的: 4或7随便谁(4或7)跑到对方所在的列中即可, 即可构成一棵新树
+- 我们可以看到, 在同一列中存在了两个7, 上面的深绿色的7其实是4搬过来的, 我们这里直接把4改成7, 这里我们通过7代表这棵树的标识
+- 这样做的原因是，比如在这个例子中, 当我们去实现时，就是0~11的数组, 每一个元素都是一个叶子节点
+- 每个节点的标识通过下标即可标识，不必重复标识，而更重要的不是标识每个节点，而是标识当前节点归在哪个类中
+- 既然4归在了7这一类中，那就把7这个标识直接写上
+- 上图对角线画法是一种障眼法，这样做可以看得更明白, 我们可以把这些对角线点都齐刷刷的移到与0对齐，就变成了一个数组
+- 这种对角线拉开布局和存在一个数组里完全是等效的，之前每个各自为一类，现在4归到7类，在数组中则把4修改为7即可
+- 接下来我们继续做Union, 如下：
 
 <div align="center">
     <img width="800" src="./screenshot/96.jpg">
@@ -546,8 +550,77 @@ for alias, name in beauty.items():
     <br />
 </div>
 
-- 现在我们试图将1和6进行Union, 我们发现1是标识, 代表一类, 在这一类中, 除了1, 还有4和7, 4和7也标成1, 代表同一类
+- 现在我们试图将1和6进行Union, 我们发现1是标识, 代表一类, 在这一类(列, 每一列都可看成一棵树)中, 除了1, 还有4和7, 4和7也标成1, 代表同一类
 - 这时候我们做Union可能比较困难, 我们能找到1, 但是找6的时候, 发现6也是一类的标识, 在6这一类中还有2, 5, 9
 - 无论是1类还是6类, 类中的成员都很多, 无论将1类归为6类, 还是将6类归为1类, 每次搬家都耗费很多时间
-- 这种方式我们称为Slow-Union, 效率较低, 复杂度很高, 时间上会受到惩罚
-- TODO ...
+- 但是当我们要查询，比如：2号是哪一类，5号是哪一类等，都可以在常数时间内查询到
+- 当所有元素归到最左边时候，看得非常清楚，任何元素属于哪一类，都可以在O(1)的时间找到，常数查询是非常快的，这叫**Quick-Find**
+- 唯一的问题是在做Union的时候很麻烦，需要将每个元素都移动到对方类中，这种方式我们称为**Slow-Union**
+- Slow-Union的效率较低, 复杂度很高, 时间上会受到惩罚，我们要考虑如何把Union变得更快
+- 这里拖家带口的搬法很像Vector或Array，它们的特点是所有东西都及时更新, 无论在任何时候, 举个例子，有任意一个数组
+- 如果需要在这个数组的某个位置上加一个元素, 我们会把这个位置前面的元素复制一份, 后面的所有元素向后挪一位，然后把新元素加入该位置
+- 这样的动作非常致命，效率特别低下，这就是上面我们拖家带口的搬家是一样的，所以我们考虑使用List来做，List的好处是所有操作都是局部的
+- 我们可以考虑将1类和6类这两类比作是2个班级，每个班级都有一个班长(该类的标识)，当我们在一个班级(比如1类)中问，同学你是哪个班的?
+- 该同学回答，我在1号(该类标识)所在的班，当我们在另一个班级(比如6类)中问，同学你是哪个班的? 该同学回答，我在6号(该类标识)所在的班
+- 所以，在真正合并的时候, 不必真正全部归到一类中去，而是采用链表List的方式，进行Link处理, 如下
+
+<div align="center">
+    <img width="800" src="./screenshot/97.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 我们把一个班上的同学根据来到这个班时候的前后顺序Link起来, 比如1号这个班，在其中问4号同学, 它不会直接回答他是1号所在的班
+- 他会说，我是7号所在的班，然后再问7号，7号回答我是1号所在的班，最后问1号，1号淡定的回答我是1号所在的班
+- 1号属于1号这个班，这个话外之音是1号就是班长(该类的标识)，同样的6号班级也可以同样的进行组织
+- 我们只需要按照这个Link，顺藤摸瓜往上摸就可以将所有相关的类全部连接起来，这样虽然有些别扭，但是我们可以很清楚的明白这个关系
+- 它的好处在于，将来如果要做Union, 将1号和6号所在的列合并，我们可以很轻松的直接把1号指向6号就可以了(或6号指向1号,二选一)，如下图
+
+<div align="center">
+    <img width="800" src="./screenshot/98.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 可见，这个Union只需要花费O(1)的时间，这种方式我们称为**Quick-Union**
+- 我们可以知道，算法没有绝对万能的，此长彼短，这个Union很快，但是Find效率却不高
+- 在这里查找是比较繁琐耗时的，不管在List还是在Huffman Tree中都是一样
+- 在Huffman Tree中，任何点的Find所需要的成本，取决于它在树中的深度，我们需要继续改进它
+- 所以，最好的组成一个班的姿势是，构造一个深度为2的树，班长作为树根，其他成员作为叶子节点(扁平化组织)，这时候高度达到最小
+- 任何一次Find, 叶子到班长只需要O(1)的时间, 班长会自己指向自己, 从而结束查找，按照这种思路启发
+- 我们要加强Find, 需要改进Union来做到，如何改进Union？这里有一些技巧
+- 比如A,B两个班级(树)，最主要的差异在于高度, 在Union的时候, A归到B中还是B归到A中结果是一样的，但是按照贪心原则
+- 我们想着把高度较低的树归到高度较高的树中去, 这样使得整体高度趋向于矮，当然最理想的还是构造深度为2的树
+- 在每次Union的时候, 用矮的加到高的里去，整体的每一个班的规模如果是n的话，它的高度在Big-O的意义上来说不超过O(logn)
+- 这意味着，无论是Find还是Union都可以在O(logn)的时间内完成，在之前的方式是Find是O(1), Union是O(N)
+- 总体衡量，看下改进，Find从O(1)到O(logn), Union从O(N)到O(logn), Find是倒退, Union是改进
+- 因为Union的改进的幅度巨大, Find倒退幅度很小, 所以整体改进较大
+- 关于Union还有一个技巧，在这里记录一下，就是Path Compression
+- 我们为了尽可能贪心的往深度为2的目标去凑，有个诀窍是在Find的时候
+- Find操作看上去是静态操作，比如从某一点开始，顺藤摸瓜向上找到班长，其实，可以把Find变成动态的
+- 我们设想Find的路径有一个"折叠"的效果, 也就是压缩，如下图
+
+<div align="center">
+    <img width="600" src="./screenshot/99.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 之前我们是这样的，比如在绿色的点的位置逐层查找，现在我们将每层都直接挂载到树根位置，做这样一个结构的转换
+- 我们可以看到之前每层的高度已经被压缩了，这个就叫做路径压缩 Path Compression
+- 在这里上图是我们给出的主要路径图，当然树中还有其他叶子节点(或分支)，我们为了看得更清晰，省略了而已
+
+<div align="center">
+    <img width="800" src="./screenshot/100.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 如上图，右边我们要find(4), 它需要找到7,1,6(这个过程是：7再找1, 1再找6, 6告诉你本人就是最终结果), 这条路径最终返回6
+- 也就是说find(4)要花3份的时间, find(7)要花2份的时间, find(1)要花1份的时间
+- 所以，按照路径压缩的逻辑，我们在走这条路的同时可以把这些点都摘下来，连接到班长(树根)上去, 方法是直接将自己的值变成班长的值
+- 如上图左边所示，这样的方式就相当于之前的方式来说就完成了一次路径压缩
