update: dsa 20.md

--- a/dsa/contents/20.md
+++ b/dsa/contents/20.md
@@ -167,7 +167,7 @@
 - 注意之前最后的元素x未必全局最小，所以下滤到上图示例的位置，而且下一个Max(用n表示)也就位了，恢复成一个有序的堆结构，这里仅作说明
 - 由此可见，堆排序也属于Selectionsort的家族，也可以看做是一种特例
 
-**Insertionsort**
+**插入排序 Insertionsort**
 
 <div align="center">
     <img width="600" src="./screenshot/107.jpg">
@@ -176,4 +176,62 @@
     <br />
 </div>
 
-- ...
+- 同样的，插入排序将整个序列分为前后两部分，不同的是和选择排序有些对称：前缀是有序的，后缀是无序的
+- 这种组合会更好的理解和实现，在整理后缀无序部分的时候只需要将当前元素与前缀有序部分作对比和插入即可
+- 选择排序和插入排序看上去很像，但是插入排序有很多好处：自然，在线
+    * 自然表示符合人的自然思维
+    * 在线的意思是数据无须全部就位，来一个数据处理一个数据，这恰恰是选择排序做不到的
+- 插入排序的复杂度虽然是$O(n^2)$, 但很大概率上，也就是大多数情况下可以表现的非常好
+- 而对于选择排序，如果不使用堆的数据结构(也就是堆排序)，复杂度一定是$O(n^2)$
+- 这里默认堆排序是选择排序的一个特例，上面讲过
+
+**选取问题 QuickSelect ~ Pivot**
+
+- 一般我们从一个序列中找到一个第k大的元素，一般的做法是先排个序，再按下标来取
+- 但是这种做法并不好，以最快的排序方式也要O(nlogn)的时间，而目标要求是要找到一个元素，而非去排序
+- 就相当于要你拿一个苹果，你却抱来了一筐，能满足需求，但是成本是巨大的，所以这种做法并不合理
+- 但是在一个混沌的序列中，要找到第k大的元素，你必须知道所有的元素, 这就说明其复杂度至少也要O(n)
+- 这里用减而治之的策略实现，其方法是**猜测**，就像是赌博一样
+
+<div align="center">
+    <img width="600" src="./screenshot/108.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 如上图, 从整个序列中随机抓一个，赌这个就是第k大的元素，之后再来进行验证
+- 验证方法是将序列中比这个大的元素全放到右侧，比这个小的全放在左侧，这就形成了左小右大的序列
+- 将序列中所有元素全部分拣完成之后，这个之前随机抓的这个元素是否是第k大的元素就会水落石出
+- 如果猜对了，那很好，但是概率较低，这个策略的关键是处理猜错的情况
+- 猜错有两种情况，猜大了或者猜小了，如下图
+
+<div align="center">
+    <img width="600" src="./screenshot/109.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- k的位置如上图橙线所示，如果[i]这个猜测的位置大了，如上排，那么可以去除蓝色的G区域
+- 反之，如果猜小了如下排，可以去除绿色的L区域，这就是减而治之的"减"
+- 一直按照这种策略，继续猜测，直到变成了一个元素，问题规模逐渐缩小
+- 这个问题叫做quick select，这种技巧在后续的quicksort中会有应用，就是找这个pivot
+- 伪代码如下，仅供参考
+    ```cpp
+    template <typename T> void quickSelect(Vector<T> & A, Rank k) {
+        for(Rank lo = 0, hi = A.size() - 1; lo < hi;) {
+            Rank i = lo, j = hi; 
+            T piovt = A[lo];
+            while(i < j) {
+                // O(hi - lo + 1) = O(n);
+                while(i < j && pivot <= A[j]) j--; A[i] = A[j];
+                while(i < j && A[j] <= pivot) i++; A[j] = A[i];
+            } // assert: i=j
+        }
+        A[i] = pivot;
+        if(k <= i) hi = i - 1;
+        if(i <= k) lo = i + 1;
+    } // A[k] is now a pivot
+    ```
+
