update: dsa 20.md

--- a/dsa/contents/20.md
+++ b/dsa/contents/20.md
@@ -7,7 +7,7 @@
     <br />
 </div>
 
-- 从逻辑结构上理解堆是一种树形结构，这种树是一种几乎完美的树，也就是完全二叉树
+- 从逻辑结构上理解堆是一种树形结构，这种树是一种几乎完美的树，也就是完全二叉树
   * 完全二叉树 complete binary tree
   * 特点是：
     * 在非(倒数第一和倒数第二)层结构上的节点都是孩子双全的
@@ -234,4 +234,3 @@
         if(i <= k) lo = i + 1;
     } // A[k] is now a pivot
     ```
-
