update: dsa 21.md

--- a/dsa/contents/21.md
+++ b/dsa/contents/21.md
@@ -266,5 +266,8 @@ struct DijkstraPU {
 </div>
 
 $$
-n \cdot d \cdot log_d n + e \cdot log_d n = (n \cdot d + e) \cdot log_d n = O(e \cdot log_{(e/n+2)} n) (when \  d \approx e/n + 2) = O(max(nlogn, e))
+n \cdot d \cdot log_d n + e \cdot log_d n \\
+= (n \cdot d + e) \cdot log_d n \\
+= O(e \cdot log_{(e/n+2)} n) (when \  d \approx e/n + 2) \\
+= O(max(nlogn, e))
 $$
