--- a/dsa/contents/21.md
+++ b/dsa/contents/21.md
@@ -33,7 +33,7 @@
 
 - 在科学界和电影界总是惊人的相似，邓俊辉老师(上左)和演员汤姆·加瓦那(Tom Cavanagh, 闪电侠哈里森·威尔斯博士的扮演者)(上右)，在某些时候也是惊人的相似
 - 这位土耳其教授在讲解Dijkstra算法的时候，手中拿着像是编制的网兜一样的线条，就是用这个工具来计算图中两点之间的最短距离
-- 如果将计算机中的图，变成教授手中拿着的这个工具，有多少地点就准备几个珠子，然后准备一些丝线，按照计算机中的图结构,如上上图(中)连接起来
+- 如果将计算机中的图，变成教授手中拿着的这个工具，有多少地点就准备几个珠子，然后准备一些丝线，按照计算机中的图结构,如上上上图(中)连接起来
 - 两点之间如果权重(通信代价)是几，就用几个单位的线连接起来，这样就把每条边转换为对应长度的丝线
 - 有了这样的工具之后，只要用我们的双手一边拉着起点(source)，一边拉着终点(destination)，像是网兜一样拎起来
 - 接下来，两只手向相反方向移动，这样可以迅速地(基本上就一次操作，在O(1)的时间)找到一条拉直的路，这条路就是最短路径，这是最自然的思维
