update: dsa 22.md

--- a/dsa/contents/22.md
+++ b/dsa/contents/22.md
@@ -193,4 +193,27 @@ int gs_IC(int A[], int n) {
     * 这时候我们用主定理来看下这个算法的复杂度：T(n) = 2 * T(n/2) + O(n) = O(n*logn)
     * 备注：通过比较$n^{log_2^2}$和n比较发现两者相等，之后乘上一个logn
     * 这时候，算法从之前的$n^2$降低到nlogn
+- 关键代码
+```cpp
+// Divide-And-Conquer: O(nlogn)
+int gs_DC(int A[], int lo, int hi) {
+    if(hi - lo < 2) return A[lo];
+    // 递归基在中点切分
+    int mi = (lo + hi) / 2;
+     // 枚举
+    int gsL = A[mi-1], sL = 0, i = mi;
+    // 所有[mi, j)类区段
+    while(lo < i--) {
+        if(gsL < (sL += A[i])) gsL = sL;
+    }
+    // 枚举
+    int gsR = A[mi], sR = 0, j = mi - 1;
+    // 所有[mi, j)类区段
+    while(++j < hi) {
+        // 更新
+        if(gsR < (sR += A[j])) gsR = sR;
+    }
+    return max(gsL + gsR, max(gs_DC(A, lo, mi), gs_DC(A, mi, hi))); // 继续递归
+}
+```
 - 这个算法是否还可以继续优化呢?
