update: dsa 22.md

--- a/dsa/contents/22.md
+++ b/dsa/contents/22.md
@@ -194,26 +194,77 @@ int gs_IC(int A[], int n) {
     * 备注：通过比较$n^{log_2^2}$和n比较发现两者相等，之后乘上一个logn
     * 这时候，算法从之前的$n^2$降低到nlogn
 - 关键代码
-```cpp
-// Divide-And-Conquer: O(nlogn)
-int gs_DC(int A[], int lo, int hi) {
-    if(hi - lo < 2) return A[lo];
-    // 递归基在中点切分
-    int mi = (lo + hi) / 2;
-     // 枚举
-    int gsL = A[mi-1], sL = 0, i = mi;
-    // 所有[mi, j)类区段
-    while(lo < i--) {
-        if(gsL < (sL += A[i])) gsL = sL;
+    ```cpp
+    // Divide-And-Conquer: O(nlogn)
+    int gs_DC(int A[], int lo, int hi) {
+        if(hi - lo < 2) return A[lo];
+        // 递归基在中点切分
+        int mi = (lo + hi) / 2;
+        // 枚举
+        int gsL = A[mi-1], sL = 0, i = mi;
+        // 所有[mi, j)类区段
+        while(lo < i--) {
+            if(gsL < (sL += A[i])) gsL = sL;
+        }
+        // 枚举
+        int gsR = A[mi], sR = 0, j = mi - 1;
+        // 所有[mi, j)类区段
+        while(++j < hi) {
+            // 更新
+            if(gsR < (sR += A[j])) gsR = sR;
+        }
+        return max(gsL + gsR, max(gs_DC(A, lo, mi), gs_DC(A, mi, hi))); // 继续递归
     }
-    // 枚举
-    int gsR = A[mi], sR = 0, j = mi - 1;
-    // 所有[mi, j)类区段
-    while(++j < hi) {
-        // 更新
-        if(gsR < (sR += A[j])) gsR = sR;
-    }
-    return max(gsL + gsR, max(gs_DC(A, lo, mi), gs_DC(A, mi, hi))); // 继续递归
-}
-```
+    ```
 - 这个算法是否还可以继续优化呢?
+
+4 ) **Decrease-and-Conquer**
+
+<div align="center">
+    <img width="800" src="./screenshot/130.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 我们还在这个[lo,hi)区间内，虽然一开始不知道GS具体在哪里，但是它总会存在于一段区间内: $GS(lo,hi) = A[i,j)$
+- 然后，我们看下lo~hi之间的一些后缀(这里的后缀是指终点锁定在A[hi-1, hi)这一点上的slice)
+- 我们要找总和非正的后缀A[k,hi), 即：S(k, hi) <= 0, S是函数不是区间，用()表示
+- 假设后缀A[k,hi)这个slice的总和S在第一时间达到了不是正数的条件(<=0)，即有这样一个slice,我们称为slice1，它应该是最短的区间
+- 假设这个slice1和我们GS存在交叉，那么交叉区间应该是：S(k,j)
+- 我们知道S(k,j)所代表的区间A[k,j)是A[i,j)的后缀，而且这个区间的总和必须是正数
+- 为什么这个总和必须为正数，如果非正，能舍弃，那原区间就构不成GS了就完全可以抹除这个后缀了
+- 即：S(k,j) > 0，又 S(k,hi) <= 0, 同时 k < j, 通过递推，我们知道: S(j,hi) < 0 这个区间我们用slice2表示
+- 这时候，S(j,hi)比S(k,hi)区间上比较还要短，即：slice2比slice1还要短，这时候我们知道这个和slice1是最短的总和为负的区间相矛盾了
+- 所以，区间A[i,j)和区间A[k,hi)之间没有交集
+- 我们通过反证得到：**最短的总和非正的后缀A[k,hi), 必然与GS(lo,hi)=A[i,j)无交**
+- 这时候，我们可以通过**减而治之**的策略，通过一趟线性扫描在线性时间内找出GS
+    * 从末尾开始遍历，查找后缀，当总和变成了非正，就可以把该区间割除，不会影响GS所在区间
+    * 同时在每个被割除的区间可能存在GS,找到每个区间的GS,更新记录最大的GS
+    * 重复不断的做这个事情，找到唯一那个GS，简单明了
+- 这时候算法的复杂度为：O(n)
+
+- 图示
+
+<div align="center">
+    <img width="800" src="./screenshot/131.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 示例代码
+    ```cpp
+    // Linear Scan: O(n)
+    int gs_LS(int A[], int n) {
+        int gs = A[0], s = 0, i = n, j = n;
+        // 对于当前去加[i,j)
+        while(0 < i--) {
+            // 递归地得到其总和：O(1)
+            s += A[i];
+            if(gs < s) gs = s; // 择优，更新
+            if(s <= 0) {s = 0; j = i;} // 剪除负和后缀
+        }
+        return gs;
+    }
+    ```
