update: dsa 22.md

--- a/dsa/contents/22.md
+++ b/dsa/contents/22.md
@@ -3,7 +3,7 @@
 - 分而治之，就像是团队合作，将一项工作分解成不同的成员去处理
 
 <div align="center">
-    <img width="800" src="./screenshot/124.jpg">
+    <img width="600" src="./screenshot/124.jpg">
     <br />
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
@@ -27,7 +27,7 @@
 - 这时候评估递归算法的复杂度，我们需要以抽象对抽象，用方程或递推式来解决，如下
 
 <div align="center">
-    <img width="800" src="./screenshot/125.jpg">
+    <img width="600" src="./screenshot/125.jpg">
     <br />
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
@@ -86,7 +86,7 @@
 - 在Greatest Slice中可能会有一些歧义，比如在两个slice中表现相同，这时候我们更倾向于取更短的slice，即项数更少的，如下图
 
 <div align="center">
-    <img width="800" src="./screenshot/126.jpg">
+    <img width="600" src="./screenshot/126.jpg">
     <br />
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
@@ -118,7 +118,7 @@
 - 这个算法非常的蛮力，达到了$O(n^3)$的复杂度
 
 <div align="center">
-    <img width="800" src="./screenshot/127.jpg">
+    <img width="600" src="./screenshot/127.jpg">
     <br />
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
@@ -161,7 +161,7 @@ int gs_IC(int A[], int n) {
 - 这个方法相较于之前有所改进，但是改进不大, 因为依然有两个循环
 
 <div align="center">
-    <img width="800" src="./screenshot/128.jpg">
+    <img width="600" src="./screenshot/128.jpg">
     <br />
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
@@ -173,7 +173,7 @@ int gs_IC(int A[], int n) {
 3 ) **Divide-and-Conquer**
 
 <div align="center">
-    <img width="800" src="./screenshot/129.jpg">
+    <img width="600" src="./screenshot/129.jpg">
     <br />
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
@@ -221,7 +221,7 @@ int gs_IC(int A[], int n) {
 4 ) **Decrease-and-Conquer**
 
 <div align="center">
-    <img width="800" src="./screenshot/130.jpg">
+    <img width="600" src="./screenshot/130.jpg">
     <br />
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
@@ -247,7 +247,7 @@ int gs_IC(int A[], int n) {
 - 图示
 
 <div align="center">
-    <img width="800" src="./screenshot/131.jpg">
+    <img width="600" src="./screenshot/131.jpg">
     <br />
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
@@ -268,3 +268,114 @@ int gs_IC(int A[], int n) {
         return gs;
     }
     ```
+
+### Multiplication: Naive + DAC
+
+<div align="center">
+    <img width="600" src="./screenshot/132.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 这里聊下乘法中的分而治之，如上图
+- 一般如果两个n位数相乘，得到的一个新数一定是2n位数字，比如：900*900=810000
+    * 但也有例外：100*100=10000
+    * 所以我们用一般性来表述，表示一个大约的估计
+    * 我们可以把10000看做010000这样占位就说的通了
+- 我们做数字的乘法的时候一般都是在稿纸上逐位相乘，现在有了复杂度的概念，我们知道这个算法的复杂度是O(n^2)
+- 也就是说被乘数和乘数的每一个数位的组合都要做一次乘法，显然这个算法并不好，我们希望算的更快
+- 我们想要用分而治之来优化这个问题，我们把这两个n位数分别拆解成n/2位数
+- 这里绿色的n就会分解为n/2的绿色A和n/2的绿色B，同理蓝色的n也做同样分解，如上图
+- 在计算的时候，我们把n/2的B与n/2的D相乘计算出一个n位的BD, 同理，对高位而言，得到一个AC
+- 作为乘法还有交叉项，不论A和D相乘还是B和C相乘都是n位数，只不过对其的位置不同，也就是存在补位0(后面会有补充)，如上图它们的橙色位置
+- 最后把计算出的四位数对齐加起来，得到最后的结果，我们来分析一下这个算法的复杂度
+- $T(n) = 4 * T(n/2) + O(n) = O(n^{log_2 4}) = O(n^2)$
+    * 这里分成了4个子任务，而且每个子任务的规模都是n/2, 为此只需要花O(n)的时间
+    * 关于上面的O(n) 其实是: 4 * n/2 = 2n, 我们注意到AC、BC、AD后面都有补位0, 在计算机中我们用移位起来实现，所以常数时间即可解决问题
+    * 所以最后的相加操作的时间复杂度是O(n)
+    * 根据主定理，总体耗时：$O(n^2)$
+- 显然，这个分治方法并没有优化，问题出在哪儿？我们先前分成了4个子任务，能否进行优化？
+- 利用数学恒等式：$B*C + A*D = A*C + B*D - (A - B) * (C - D)$
+- 我们知道乘法复杂度远远高于加和减, 上面表面上将2个乘法变成了3个乘法，感觉问题变得更糟糕了
+- 但是基于上图我们知道，$A*C$和$B*D$都已经被计算过了，我们只需要关注$(A - B) * (C - D)$即可
+- 所以实际上，我们把2个乘法变成了1个乘法，实际上是优化的
+- 总体看来，一共有3个乘法，它们分别是:
+    * $A*C$
+    * $B*D$
+    * $(A - B) * (C - D)$
+- 这样，我们根据主定理来计算一下它的时间复杂度
+- $T(n) = 3 * T(n/2) + O(n) = O(n^{log_2 3}) \approx O(n^{1.585})$
+- 如下图示
+
+<div align="center">
+    <img width="600" src="./screenshot/133.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+### Mergesort: DAC
+
+- 这里我们通过归并排序的例子来说明一下分而治之的策略
+
+<div align="center">
+    <img width="600" src="./screenshot/134.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 当我们面对一个足够长的序列进行排序的时候，我们一般会把问题从中间一分为二，前后两部分各自进行自己的任务
+- 当子任务仍旧很大的时候，也就是说不方便排序的时候，继续一分为二，这样不断的一分为二的下去，直到分到足够小，最后剩下一个元素
+- 一个元素其实是已经排好序的了，之后进行组合merge，如上图所示，在merge的过程中进行排序
+- 由此可知，解决问题的实质过程并不在分的阶段，而在于合的阶段，而每一次merge其实拿到的都是两个有序的序列
+- 每一次merge的过程是把两个有序的序列合并起来变成一个整体有序的序列
+- 总结一下，Mergesort的过程就是不断自顶而下的去做分，一直分到每一个元素，然后再自底而上的去做归并
+- 这个算法可以很简明的写出来，参考代码如下
+
+    ```cpp
+    template <typename T>
+    // [lo, hi)
+    void Vector<T>::mergeSort(Rank lo, Rank hi) {
+        if(hi - lo < 2) return; // 单元素区间自然有序
+        // 否则
+        int mi = (lo + hi) >> 1; // 以中点为界
+        mergeSort(lo, mi); // 对前半段排序
+        mergeSort(mi, hi); // 对后半段排序
+        merge(lo, mi, hi); // 归并
+    }
+    ```
+
+- 算法图示如下
+
+<div align="center">
+    <img width="400" src="./screenshot/135.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 最终merge的技巧是Mergesort实质的技巧，用到了二路归并(2-Way Merge)的算法
+
+**2-Way Merge**
+
+<div align="center">
+    <img width="600" src="./screenshot/136.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 有两个各自有序的序列，我们用红和蓝进行标识，假想它们就是两个队列
+- 在任何时候可以忽略队伍后面的所有元素，只看队列中的第一个元素，如：5和2
+- 然后将最小的一个元素取出来存入一个空的队列中，如图(b)
+- 2被摘除之后，后面的所有元素会顺次的补上来，算法开始进行下一轮的迭代
+- 同样的，将目光盯住队列的头部元素，这时候是5和4，取出最小的元素4存入之前的队列中，如图(c)
+- 反复进行这类操作，将最小的摘出来存入队列
+- 最终会变成一个整体有序的序列，这个过程只需要线性的时间就够了，也就是O(n)
+- 由于核心的merge的过程只需要线性的时间，而Mergesort的时间复杂度我们可以计算一下
+- T(n) = 2 * T(n/2) + O(n) = O(nlogn)
+- 由此可见，Mergesort的时间复杂度为：O(nlogn), 
+- 其实，mergesort非常的有名，是历史上第一个达到O(nlogn)效率的算法
+- 在大数据处理方面，内存不容易操作的时候是一个非常好的算法
