--- a/dsa/contents/22.md
+++ b/dsa/contents/22.md
@@ -376,6 +376,10 @@ int gs_IC(int A[], int n) {
 - 最终会变成一个整体有序的序列，这个过程只需要线性的时间就够了，也就是O(n)
 - 由于核心的merge的过程只需要线性的时间，而Mergesort的时间复杂度我们可以计算一下
 - T(n) = 2 * T(n/2) + O(n) = O(nlogn)
-- 由此可见，Mergesort的时间复杂度为：O(nlogn), 
+- 由此可见，Mergesort的时间复杂度为：O(nlogn)
 - 其实，mergesort非常的有名，是历史上第一个达到O(nlogn)效率的算法
 - 在大数据处理方面，内存不容易操作的时候是一个非常好的算法
+- 这个算法背后的哲学依然是分而治之，准确来讲，就是把它分为两个规模相当的任务
+- 而且诀窍是无论分还是合，都能够在颇为有效的这个算法以内完成
+
+### 未完 待续
